--- a/Mobile Development/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Mobile Development/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,13 +8,13 @@
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:icon="@drawable/myoutfit_menu_icon"
+        android:title="@string/my_outfit" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:icon="@drawable/chatbot_menu_icon"
+        android:title="@string/chatbot" />
 
     <item
         android:id="@+id/navigation_profile"
