--- a/Mobile Development/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Mobile Development/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,15 +13,15 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.application.fasrecon.ui.dashboard.DashboardFragment"
+        android:name="com.application.fasrecon.ui.myoutfit.MyoutfitFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_myoutfit" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.application.fasrecon.ui.notifications.NotificationsFragment"
+        android:name="com.application.fasrecon.ui.chatbot.ChatbotFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_chatbot" />
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.application.fasrecon.ui.setting.SettingFragment"
