--- a/Mobile Development/app/src/main/res/layout/alert_dialog.xml
+++ b/Mobile Development/app/src/main/res/layout/alert_dialog.xml
@@ -12,8 +12,8 @@
     card_view:layout_constraintCircleRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:padding="16dp">
 
@@ -21,7 +21,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Logout"
+            android:text="@string/logout_alert"
             android:textSize="16sp"
             android:textStyle="bold"
             card_view:layout_constraintEnd_toEndOf="parent"
