--- a/Mobile Development/app/src/main/res/values/themes.xml
+++ b/Mobile Development/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.Fasrecon_primary" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/primary_color</item>
         <item name="colorPrimary">@color/primary_color</item>
     </style>
+
     <style name="Theme.Fasrecon_tertiary" parent="Theme.Material3.DayNight">
         <item name="android:statusBarColor">@color/primary_color</item>
         <item name="colorPrimary">@color/primary_color</item>
@@ -18,6 +19,16 @@
         <item name="android:backgroundTint">@color/primary_color</item>
         <item name="android:textColor">@color/white</item>
         <item name="cornerRadius">12dp</item>
+    </style>
+
+    <style name="cloth_list" parent="ThemeOverlay.Material3.Button">
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/primary_color</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">10sp</item>
+        <item name="strokeColor">@color/primary_color</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="android:radius">24dp</item>
     </style>
 
     <style name="button_signup_onboarding_page" parent="ThemeOverlay.Material3.Button">
@@ -83,7 +94,9 @@
         <item name="android:width">56dp</item>
         <item name="android:height">32dp</item>
         <item name="marginHorizontal">4dp</item>
-        <item name="shapeAppearance">@style/ShapeAppearance.Material3.NavigationBarView.ActiveIndicator</item>
+        <item name="shapeAppearance">
+            @style/ShapeAppearance.Material3.NavigationBarView.ActiveIndicator
+        </item>
         <item name="android:color">?attr/colorSecondaryContainer</item>
     </style>
 
