--- a/Mobile Development/app/src/main/res/layout/fragment_myoutfit.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_myoutfit.xml
@@ -6,17 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".ui.myoutfit.MyoutfitFragment">
 
-    <TextView
-        android:id="@+id/text_dashboard"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <TextView
+       android:id="@+id/label_your_outfit_collection"
+       android:layout_width="0dp"
+       android:layout_height="wrap_content"
+       android:text="@string/your_outfit_collection"
+       android:textColor="@color/black"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="12dp"
+      android:textSize="16sp"
+      android:textStyle="bold"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"/>
+
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/list_outfit"
+       android:layout_width="0dp"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal"
+       android:layout_marginTop="24dp"
+       android:layout_marginStart="20dp"
+       android:layout_marginEnd="20dp"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/label_your_outfit_collection"
+       app:layout_constraintEnd_toEndOf="parent"
+       tools:listitem="@layout/item_outfit_list"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
