--- a/Mobile Development/app/src/main/res/layout/logout_dialog.xml
+++ b/Mobile Development/app/src/main/res/layout/logout_dialog.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="175dp"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     android:layout_gravity="center"
@@ -13,63 +13,51 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_gravity="center">
+        android:layout_height="175dp"
+        android:layout_gravity="center"
+        android:padding="16dp">
 
         <TextView
-            android:id="@+id/label_filter_dialog"
+            android:id="@+id/loguout_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/choose_your_outfit_type"
+            android:text="@string/logout_alert"
             android:textSize="20sp"
             android:textStyle="bold"
-            card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent"/>
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_outfit_type"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/logout_description"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@id/label_filter_dialog"
+            android:layout_marginTop="12dp"
+            android:text="@string/logout_message"
+            android:textSize="16sp"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
-            tools:listitem="@layout/item_outfit_type"
-            tools:layout_height="150dp"/>
-
-        <Button
-            android:id="@+id/btn_cancel_filter"
-            style="@style/button_cancel"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="8dp"
-            android:text="@string/cancel"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toEndOf="@id/guideline_vertical"/>
+            card_view:layout_constraintTop_toBottomOf="@id/loguout_title" />
 
         <Button
-            android:id="@+id/btn_apply_filter"
+            android:id="@+id/btn_cancel"
+            style="@style/button_cancel"
+            android:layout_marginEnd="8dp"
+            android:text="@string/cancel_setting"
+            card_view:layout_constraintTop_toTopOf="@id/guideline_horizontal"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintEnd_toEndOf="@id/guideline_vertical"
+            card_view:layout_constraintBottom_toBottomOf="parent" />
+
+        <Button
+            android:id="@+id/btn_logout"
             style="@style/button_apply"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/apply"
+            android:text="@string/log_out"
             card_view:layout_constraintStart_toStartOf="@id/guideline_vertical"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toEndOf="parent"/>
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="64dp"
-            android:orientation="vertical"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintGuide_percent="0.5"
-            card_view:layout_constraintStart_toStartOf="parent" />
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintTop_toTopOf="@id/guideline_horizontal"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_horizontal"
@@ -77,7 +65,17 @@
             android:layout_height="64dp"
             android:orientation="horizontal"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintGuide_percent="0.8"
+            card_view:layout_constraintGuide_percent="0.7"
+            card_view:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="64dp"
+            android:layout_marginStart="8dp"
+            android:orientation="vertical"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintGuide_percent="0.5"
             card_view:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
