--- a/Mobile Development/app/src/main/res/values/themes.xml
+++ b/Mobile Development/app/src/main/res/values/themes.xml
@@ -227,5 +227,35 @@
         <item name="android:textColor">@color/white</item>
         <item name="cornerRadius">10dp</item>
     </style>
+
+    <style name="icon_item_settings">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:background">@drawable/rounded_shape</item>
+    </style>
+
+    <style name="label_item_settings">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">24dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="arrow_item_settings">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:src">@drawable/baseline_arrow_forward_24</item>
+    </style>
+
+    <style name="path_settings">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:background">@color/path_color</item>
+    </style>
     
 </resources>
