--- a/Mobile Development/app/src/main/res/layout/filter_dialog.xml
+++ b/Mobile Development/app/src/main/res/layout/filter_dialog.xml
@@ -31,15 +31,16 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_outfit_type"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@id/label_filter_dialog"
             card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@id/label_filter_dialog"
             card_view:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
-            tools:listitem="@layout/item_outfit_type"
+            tools:listitem="@layout/item_cloth_type"
             tools:layout_height="150dp"/>
 
         <Button
