--- a/Mobile Development/app/src/main/res/layout/fragment_myoutfit.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_myoutfit.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_fragment_activity"
-    tools:context=".ui.myoutfit.MyoutfitFragment">
+    tools:context=".ui.mycloth.MyClothesFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
