--- a/Mobile Development/app/src/main/res/layout/filter_dialog.xml
+++ b/Mobile Development/app/src/main/res/layout/filter_dialog.xml
@@ -8,8 +8,7 @@
     android:layout_marginEnd="16dp"
     android:layout_gravity="center"
     android:padding="8dp"
-    card_view:cardCornerRadius="16dp"
-    android:theme="@style/Theme.Fasrecon_primary">
+    card_view:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/choose_your_outfit_type"
+            android:text="@string/choose_your_clothes_type"
             android:textSize="20sp"
             android:textStyle="bold"
             card_view:layout_constraintStart_toStartOf="parent"
@@ -29,7 +28,7 @@
             card_view:layout_constraintTop_toTopOf="parent"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_outfit_type"
+            android:id="@+id/list_clothes_type"
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:layout_marginStart="8dp"
@@ -40,7 +39,7 @@
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintTop_toBottomOf="@id/label_filter_dialog"
             card_view:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
-            tools:listitem="@layout/item_cloth_type"
+            tools:listitem="@layout/item_clothes_type"
             tools:layout_height="150dp"/>
 
         <Button
