--- a/Mobile Development/app/src/main/res/layout/fragment_myclothes.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_myclothes.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_fragment_activity"
-    tools:context=".ui.mycloth.MyClothesFragment">
+    tools:context=".ui.myclothes.MyClothesFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -20,7 +20,7 @@
             android:id="@+id/title_fragment_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/my_outfit"
+            android:text="@string/my_clothes"
             android:textColor="@color/primary_color"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -28,12 +28,12 @@
     </androidx.appcompat.widget.Toolbar>
 
     <TextView
-        android:id="@+id/label_your_outfit_collection"
+        android:id="@+id/label_your_clothes_collection"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="@string/your_outfit_collection"
+        android:text="@string/your_clothes_collection"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -41,18 +41,18 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <ImageView
-        android:id="@+id/filter_outfit"
+        android:id="@+id/filter_clothes"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginEnd="24dp"
         android:contentDescription="@string/filter"
         android:src="@drawable/baseline_filter_list_24"
-        app:layout_constraintBottom_toBottomOf="@id/label_your_outfit_collection"
+        app:layout_constraintBottom_toBottomOf="@id/label_your_clothes_collection"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/label_your_outfit_collection" />
+        app:layout_constraintTop_toTopOf="@id/label_your_clothes_collection" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_outfit"
+        android:id="@+id/list_clothes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -61,7 +61,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/label_your_outfit_collection"
-        tools:listitem="@layout/item_cloth_list" />
+        app:layout_constraintTop_toBottomOf="@id/label_your_clothes_collection"
+        tools:listitem="@layout/item_clothes_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
