--- a/Mobile Development/app/src/main/res/layout/item_clothes_type.xml
+++ b/Mobile Development/app/src/main/res/layout/item_clothes_type.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
-        android:id="@+id/tv_cloth_type"
+        android:id="@+id/tv_clothes_type"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -20,8 +20,8 @@
         android:id="@+id/radio_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/tv_cloth_type"
-        app:layout_constraintBottom_toBottomOf="@id/tv_cloth_type"
+        app:layout_constraintTop_toTopOf="@id/tv_clothes_type"
+        app:layout_constraintBottom_toBottomOf="@id/tv_clothes_type"
         app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
