--- a/Mobile Development/app/src/main/res/values/colors.xml
+++ b/Mobile Development/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="dark_shadow">#4D000000</color>
     <color name="white">#FFFFFF</color>
     <color name="text_gray">#858597</color>
+    <color name="lighter_gray">#ACACC2</color>
+    <color name="gray">#717181</color>
     <color name="path_color">#D7D7DF</color>
     <color name="circle2">#21283F</color>
     <color name="custom_blue">#4FACFE</color>
