--- a/Mobile Development/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Mobile Development/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,9 +7,9 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_myoutfit"
+        android:id="@+id/navigation_myclothes"
         android:icon="@drawable/myclothes_menu_icon"
-        android:title="@string/my_outfit" />
+        android:title="@string/my_clothes" />
 
     <item
         android:id="@+id/navigation_chatbot"
