--- a/Mobile Development/app/src/main/res/layout/activity_profile_setting.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_profile_setting.xml
@@ -12,8 +12,11 @@
 
     <TextView
         android:id="@+id/name_edit_setting"
-        style="@style/tv_label_loginpage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:textSize="16sp"
+        android:textColor="@color/text_gray"
         android:text="@string/name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
